# gubg.deprecated

./: .gitignore  .gitmodules  .travis.yml  Home.asciidoc  Makefile  TAGS  all.sublime-project  books.asciidoc  bootstrap.makefile  guidelines.txt  home.asciidoc  install.asciidoc  install.txt  license.asciidoc  license.txt  links.asciidoc  makefile  rakefile.rb  raspberrypi.asciidoc  readme.adoc  readme.asciidoc  readme.md  readme.txt  root.tree  stuff.adoc  stuff.asciidoc  style_guidelines.asciidoc  todo.mm  todo.txt  two_paned_browsers.adoc  two_paned_browsers.asciidoc
bash/: arduino.sh  bash.cfg  bash.sh  boost.sh  decode-it.sh  dotBash_local  dotXmodmap  dotXresources  gubg_env.bat  gubg_env.sh  iup.sh  nana.sh  personal.annemie.sh  personal.default.sh  personal.gfannes.sh
blog/: 20120620.asciidoc
cpp/: buildBase.rb  root.tree
d/: base.rb  root.tree
emacs/: dotEmacs
install/: install.txt  mingw.txt
internal/: cleanAll.rb
make/: arduino.makefile  boost.makefile  da.makefile  dev_env.makefile  gubg_env.makefile  iup.makefile  nana.makefile
mucommander/: commands.linux.xml  commands.windows.xml  readme.txt
ruby/: build.rb  dependencymgr.rb  gubg.rb  hexdump.rb  tools.rb
rust/apps/dolegate/: Cargo.toml
rust/apps/dolegate/src/: main.rs
scad/: MotorBracket.jscad  MotorBracket.scad
sublime_text/: install.md  package_control_st3.py  vintageous_toggler.py
vim/: asciidoc.vim  autoclose.vim  config.bram_molenaar.vim  config.linux.vim  config.vim  config.windows.vim  hexmode.vim  maps.cpp.vim  maps.d.vim  maps.js.vim  maps.lua.vim  maps.markdown.vim  (+6 more)
(+1796 files in other folders)
