[package]

name = "dolegate"
version = "0.0.1"
authors = ["Geert Fannes <geert.fannes@gmail.com>"]

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod"
[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"
[dependencies.pistoncore-event]
git = "https://github.com/PistonDevelopers/event"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window.git"
[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"
[dependencies.quack]
git = "https://github.com/pistondevelopers/quack"